<resources>
    <string name="app_name">Voucher Scan</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="contentDescription">Content Description</string>
    <string name="welcome_back">Welcome Back</string>
    <string name="login_placeholder">Login</string>
    <string name="username_placeholder">Username</string>
    <string name="password_placeholder">Password</string>
    <string name="remember_me">Remember Me</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="log_in">Log In</string>
    <string name="dont_have_an_account">Don\'t have an account?</string>
    <string name="sign_up_here">Sign Up Here</string>
    <string name="log_out">Log Out</string>
    <string name="profile_hello">Hello,</string>
    <string name="scan_voucher">Scan Voucher</string>
    <string name="api_response_placeholder">Response Here</string>
    <string name="loading_please_wait">Loading. Please wait...</string>
</resources>
