<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingHorizontal="10dp"
    android:paddingTop="20dp"
    tools:context=".views.activities.MainActivity">

    <RelativeLayout
        android:id="@+id/RL_Loading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:visibility="visible">

        <ProgressBar
            android:id="@+id/PB_LoadingProgressBar"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_centerHorizontal="true"
            android:indeterminate="true"
            android:indeterminateBehavior="repeat"
            android:indeterminateTint="?colorPrimary" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/PB_LoadingProgressBar"
            android:layout_marginVertical="15dp"
            android:fontFamily="@font/koho_bold"
            android:text="@string/loading_please_wait"
            android:textAlignment="center"
            android:textAllCaps="true"
            android:textSize="17sp" />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/RL_ActiveResponse"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone">

        <RelativeLayout
            android:id="@+id/RL_ProfilePreview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:background="@color/transparent"
            android:paddingVertical="5dp">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/IV_ProfilePicture"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_centerVertical="true"
                android:layout_marginHorizontal="10dp"
                android:layout_marginVertical="5dp"
                android:padding="5dp"
                android:src="@drawable/ic_profile" />

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_toStartOf="@id/BTL_Logout"
                android:layout_toEndOf="@id/IV_ProfilePicture"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/koho_bold"
                    android:text="@string/profile_hello"
                    android:textAllCaps="true" />

                <TextView
                    android:id="@+id/TV_Username"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/koho_bold"
                    android:text="@string/username_placeholder"
                    android:textAllCaps="true"
                    android:textSize="16sp"
                    android:textStyle="bold" />

            </LinearLayout>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/BTL_Logout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:layout_margin="10dp"
                android:background="@drawable/primary_button"
                android:drawableEnd="@drawable/ic_arrow_right"
                android:drawablePadding="3dp"
                android:paddingHorizontal="10dp"
                android:text="@string/log_out"
                android:textAllCaps="true"
                android:textStyle="bold" />

        </RelativeLayout>

        <com.airbnb.lottie.LottieAnimationView
            android:id="@+id/LA_Scan"
            android:layout_width="300dp"
            android:layout_height="400dp"
            android:layout_centerInParent="true"
            android:layout_marginVertical="20dp"
            android:contentDescription="@string/contentDescription"
            app:lottie_autoPlay="true"
            app:lottie_loop="true"
            app:lottie_rawRes="@raw/original_scan" />

        <TextView
            android:id="@+id/apiResponse"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/LA_Scan"
            android:text="@string/api_response_placeholder"
            android:textAlignment="center"
            android:textAllCaps="true"
            android:textStyle="bold" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/BTN_ScanVoucher"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/apiResponse"
            android:layout_centerHorizontal="true"
            android:layout_marginVertical="10dp"
            android:background="@drawable/primary_button"
            android:drawableStart="@drawable/ic_qrcode"
            android:drawablePadding="10dp"
            android:padding="10dp"
            android:text="@string/scan_voucher"
            android:textAllCaps="true"
            android:textStyle="bold" />

    </RelativeLayout>

</RelativeLayout>
