<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/authentication_form_card"
    android:paddingHorizontal="20dp"
    android:paddingTop="50dp"
    tools:context=".views.fragments.LoginFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="top|center"
        android:background="@color/transparent"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/LL_pageHeader"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="?regularFont"
                android:text="@string/welcome_back"
                android:textAllCaps="true"
                android:textSize="20sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="?boldFont"
                android:text="@string/login_placeholder"
                android:textAllCaps="true"
                android:textSize="28sp" />

        </LinearLayout>

        <androidx.cardview.widget.CardView
            android:id="@+id/CV_loginForm"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="20dp"
            app:cardBackgroundColor="?altBackgroundColor"
            app:cardCornerRadius="25dp"
            app:cardElevation="0dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="15dp">

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/IL_badgeNumber"
                    style="@style/ThemeOverlay.Material3.TextInputEditText.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginVertical="15dp"
                    android:background="@drawable/edit_text_custom_background"
                    android:hint="@string/username_placeholder"
                    android:textColorHint="?customInputFieldHintColor"
                    app:boxStrokeErrorColor="?customInputFieldErrorColor"
                    app:endIconMode="clear_text"
                    app:endIconTint="@color/green"
                    app:errorIconTint="?customInputFieldErrorColor"
                    app:errorTextColor="?customInputFieldErrorColor"
                    app:hintAnimationEnabled="true"
                    app:startIconDrawable="@drawable/ic_profile"
                    app:startIconTint="@color/green">

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_gravity="center_vertical"
                        android:background="?customInputFieldBackground"
                        android:fontFamily="@font/koho_semibold"
                        android:inputType="text"
                        android:singleLine="true"
                        android:textColor="?customInputFieldInputColor"
                        android:textCursorDrawable="@color/primaryColor_700"
                        android:textSize="18sp" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/IL_loginPassword"
                    style="@style/ThemeOverlay.Material3.TextInputEditText.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginVertical="15dp"
                    android:background="@drawable/edit_text_custom_background"
                    android:hint="@string/password_placeholder"
                    android:textColorHint="?customInputFieldHintColor"
                    app:boxStrokeErrorColor="?customInputFieldErrorColor"
                    app:endIconMode="password_toggle"
                    app:endIconTint="@color/green"
                    app:errorIconTint="?customInputFieldErrorColor"
                    app:errorTextColor="?customInputFieldErrorColor"
                    app:hintAnimationEnabled="true"
                    app:startIconDrawable="@drawable/ic_lock"
                    app:startIconTint="@color/green">

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_gravity="center_vertical"
                        android:background="?customInputFieldBackground"
                        android:fontFamily="@font/koho_semibold"
                        android:inputType="textPassword"
                        android:singleLine="true"
                        android:textColor="?customInputFieldInputColor"
                        android:textCursorDrawable="@color/primaryColor_700"
                        android:textSize="18sp" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.checkbox.MaterialCheckBox
                    android:id="@+id/CB_rememberMe"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="?semiBoldFont"
                    android:text="@string/remember_me"
                    app:buttonTint="@color/green"
                    app:checkedState="checked" />

                <RelativeLayout
                    android:id="@+id/RL_loginButton"
                    android:layout_width="110dp"
                    android:layout_height="50dp"
                    android:layout_gravity="end"
                    android:layout_marginHorizontal="7dp"
                    android:layout_marginVertical="15dp"
                    android:background="@drawable/primary_button"
                    android:clickable="true"
                    android:paddingHorizontal="10dp">

                    <androidx.appcompat.widget.AppCompatButton
                        android:id="@+id/BTN_loginButton"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_centerInParent="true"
                        android:background="@color/transparent"
                        android:drawableEnd="@drawable/ic_arrow_right"
                        android:fontFamily="?boldFont"
                        android:scaleType="centerInside"
                        android:text="@string/log_in"
                        android:tint="?attr/mainIconColor" />

                    <ProgressBar
                        android:id="@+id/PB_loginProgressBar"
                        android:layout_width="25dp"
                        android:layout_height="25dp"
                        android:layout_centerInParent="true"
                        android:indeterminate="true"
                        android:indeterminateBehavior="repeat"
                        android:indeterminateTint="?mainTextColor"
                        android:visibility="gone" />

                </RelativeLayout>

                <LinearLayout
                    android:id="@+id/LL_toRegister"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginVertical="10dp"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="?semiBoldFont"
                        android:text="@string/dont_have_an_account"
                        android:textColor="?mainTextColor" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="5dp"
                        android:fontFamily="@font/koho_bold"
                        android:text="@string/sign_up_here"
                        android:textColor="@color/green" />

                </LinearLayout>

            </LinearLayout>

        </androidx.cardview.widget.CardView>

    </LinearLayout>

</ScrollView>
